2019-7-1 version 1.1

	* fix: -B
	* fix: -h
	* fix: -G with "AND" flags
	* fix: -x with -y and -g
	* fix: vflag and Vflag efficiency
	* fix: do not show <children> of a hidden node
	* fix: mutually exclusive options [V|v] and [b|o|x]
	* fix: set a [u]int64_t value
	* fix: -n is ignored without error
	* delete: macro to get a value
	* delete: macro to set a value
	* change: -p [FORMAT STRING] -> [FORMAT-STRING]
	* add: kern.conftxt as special_value
	* add: input for a numeric value in hex format

2019-6-1 version 1.0

	* add: setting a kelvin value
	* add: setting a numeric value with -B option
	* delete: useless strdup() to parse input
	* change: option -S -> -m

2019-5-21 version 0.9.1

	* fix: opaque S,efi_map_header (e.g. machdep.efi_map)
	* delete: bsd.prog.mk (Makefile)

2019-4-29 version 0.9

	* change: option -m -> -F
	* change: option -F -> -g
	* add: option -G
	* add: setting array ( name=value,value,value... )
	* add: xo_warn and xo_err messages
	* add: opaque S,input_id (e.g. kern.evdev.input.0.id)
	* fix: -x with numeric array
	* fix: -x if num == 0 print 00... else 0x... (sysctl compatibility)
	* fix: don't show "null" label

2019-4-8 version 0.2

	* fix: debug.fail_point.test_trigger_fail_point with -a (sysctl problem)
	* fix: hw.dri.0.bufs with -a (sysctl problem)
	* fix: size change with double sysctl() call,
	       (e.g, kern.file, hw.dri.0.vblank and hw.dri.0.info.i915_drpc_info)
	* fix: libxo=xml -aD segmentation fault, fixed by xo_set_flags(NULL, XOF_FLUSH)
	       but new problems:
	* fix: problem-xof-flush.c https://bugs.freebsd.org/236935
	* fix: problem-xo-huge-string.c https://bugs.freebsd.org/236937
	* delete: oid-only-value.txt (PR commit)
	* delete: problem-xo-huge-string.c (PR commit)
	* delete: problem-xof-flush.c (PR commit)

2019-3-26 version 0.1.1

	* fix: headers in opaque.c for no i386/amd64
	* delete: sysctlmibinfo.h/c (dynamic linking)

2019-2-19 version 0.1

	* add: nsysctl.c
	* add: special_value.c
	* add: opaque.c