@@ -1,0 +1,42 @@
+/*
+ * Copyright (c) 2019 Alfonso Sabato Siciliano https://alfix.gitlab.io
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND
+ * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+ * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ * ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE
+ * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+ * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
+ * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+ * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
+ * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
+ * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+ * SUCH DAMAGE.
+ */
+
+#ifndef _SYSCTLINFO_HELPER_H_
+#define _SYSCTLINFO_HELPER_H_
+
+#include <sysctlinfo.h>
+#include <sysctlmibinfo.h>
+
+/*
+ * sysctlinfo_helper uses sysctlinfo to build sysctlmif_* object and tree
+ */
+
+int sysctlinfo_idbyname(char *name, int *id, size_t *idlevel);
+
+struct sysctlmif_object *sysctlinfo_object_allflags(int *id, size_t idlevel);
+
+struct sysctlmif_object *sysctlinfo_tree_allflags(int *id, size_t idlevel);
+
+#endif // _SYSCTLINFO_HELPER_H_
